<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChatClientAndroid</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="join_chat">join</string>
    <string name="create_chat">create</string>
    <string name="logout">logout</string>
    <string name="login">login</string>
    <string name="field_desc_name">name</string>
    <string name="field_desc_password">Password</string>
    <string name="register">register</string>
    <string name="server">10.0.2.2</string>
    <string name="ok">ok</string>
    <string name="gui_test">Enable GUI Test</string>
    <string name="invite_to_chat">invite</string>
    <string name="close_chat">close</string>
    <string name="str_chatlog"></string>
    <string name="test">test</string>
    <string name="hint_send_message">send a message</string>
    <string name="send">send</string>
    <string name="leave_chat">leave</string>

</resources>
