<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|fill_horizontal"
    android:orientation="vertical"
    android:layerType="software" >

    <TextView
        android:id="@+id/debugLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_chatlog" />

    <Button
        android:id="@+id/join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/join_chat" />

    <Button
        android:id="@+id/create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_chat" />

    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout" />

</LinearLayout>
