<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layerType="none"
    android:orientation="vertical"
    tools:context="gui.util.MainActivity" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->


    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/isDebug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gui_test" />

        <Button
            android:id="@+id/test"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test" />
    </LinearLayout>

    <EditText
        android:id="@+id/server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/server" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_main_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok" />

</LinearLayout>