<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layerType="software"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.88" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_chatlog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:scrollbars="vertical" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_invite"
            style="@style/ButtonBarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invite_to_chat" />

        <Button
            android:id="@+id/btn_close"
            style="@style/ButtonBarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close_chat" />

        <Button
            android:id="@+id/btn_leave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leave_chat" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_send_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/send_textfield"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.98"
            android:ems="10"
            android:hint="@string/hint_send_message" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/btn_send"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/send" />
    </LinearLayout>

</LinearLayout>